http request from real phone

--- a/app/app/modules/core/views/home.html
+++ b/app/app/modules/core/views/home.html
@@ -48,7 +48,17 @@
 </div>
 
 <div class="padding">
-    <button class="button button-block button-positive" ng-click="useHttp()">
-        Get HTTP
+    <button class="button button-block button-positive" ng-click="useCORS()">
+        Get CORS
+    </button>
+</div>
+<div class="padding">
+    <button class="button button-block button-positive" ng-click="useJSONP()">
+        Get JSONP
+    </button>
+</div>
+<div class="padding">
+    <button class="button button-block button-positive" ng-click="useGET()">
+        Get HTTPs
     </button>
 </div>
