--- a/app/app/modules/login/views/login.html
+++ b/app/app/modules/login/views/login.html
@@ -3,26 +3,29 @@
         <div class="logo"></div>
     </div>
 
-    <form class="form-horizontal">
+    <div class="row header-block">
+        <div class="col-xs-6 content">{{L('login.signUp')}}</div>
+    </div>
+
+    <form class="form-horizontal login-form">
         <div class="form-group">
-            <label for="exampleInputEmail1" class="col-xs-2 control-label">{{translate('login')}}</label>
+            <label for="user-login" class="col-xs-2 control-label">{{L('login.login')}}</label>
             <div class="col-xs-10">
-                <input type="email" class="form-control input-lg" id="exampleInputEmail1" placeholder="Enter email">
+                <input type="email" class="form-control input-lg" id="user-login" placeholder="Enter email">
             </div>
         </div>
         <div class="form-group">
-            <label for="exampleInputPassword1" class="col-xs-2 control-label">Password</label>
+            <label for="user-pwd" class="col-xs-2 control-label">{{L('login.password')}}</label>
             <div class="col-xs-10">
-                <input type="password" class="form-control input-lg" id="exampleInputPassword1" placeholder="Password">
+                <input type="password" class="form-control input-lg" id="user-pwd" placeholder="Password">
             </div>
         </div>
     </form>
 
-    <div class="row`">
-        <div class="col-xs-6"></div>
-        <div class="col-xs-6"><a href="#TODO/forgoPwd">Forgot pwd?</a></div>
-        <div class="col-xs-12">
+    <div class="row login-help-block">
+        <div class="col-xs-12 text-right">
+            <a href="#TODO/forgoPwd">{{L('login.forgotPwd')}}</a>
         </div>
     </div>
-    <button class="login-btn">{{translate('login button')}}</button>
+    <a href="#!/profile" class="login-btn">{{L('login.loginButton')}}</a>
 </div>
