--- a/app/app/less/app.less
+++ b/app/app/less/app.less
@@ -7,5 +7,9 @@
 @brand-gray-3: #c2c2c2;
 @brand-gray-4: #959595;
 
+// z-index
+@z-float-btn: 100;
+
 @import "tools.less";
 @import "login.less";
+@import "header.less";
