--- a/app/app/less/header.less
+++ b/app/app/less/header.less
@@ -6,6 +6,9 @@
     background-position: 300px -3px;
   }
   .nav-btn {
+    background-color: @brand-blue;
+    border: 1px solid @brand-gray-1;
+    cursor: pointer;
     height: 50px;
     text-align: center;
     line-height: 50px;
@@ -13,6 +16,7 @@
     font-weight: 900;
     &.active {
       height: 55px;
+      background-color: @brand-yellow;
     }
   }
 }
