--- a/app/app/css/app.css
+++ b/app/app/css/app.css
@@ -61,6 +61,9 @@ body {
   background-position: 300px -3px;
 }
 .header .nav-btn {
+  background-color: #3c6397;
+  border: 1px solid #e1e1e1;
+  cursor: pointer;
   height: 50px;
   text-align: center;
   line-height: 50px;
@@ -69,4 +72,5 @@ body {
 }
 .header .nav-btn.active {
   height: 55px;
+  background-color: #fec24d;
 }
