--- a/app/app/modules/core/views/header.html
+++ b/app/app/modules/core/views/header.html
@@ -1,6 +1,34 @@
 <div class="row header">
     <div class="col-xs-6 logo"></div>
-    <div class="col-xs-2 nav-btn">A</div>
-    <div class="col-xs-2 nav-btn">L</div>
-    <div class="col-xs-2 nav-btn">S</div>
+    <!-- =================== Navigation bar =================== -->
+    <div class="col-xs-2 nav-btn">
+        <a class="visible-xs" href="#!/queue">A</a>
+    </div>
+    <div class="col-xs-2 nav-btn">
+        <a class="visible-xs" href="#!/queue/list">L</a>
+    </div>
+    <div class="col-xs-2 nav-btn">
+        <a class="visible-xs" href="#!/profile">S</a>
+    </div>
 </div>
+
+<!--<header class="navbar navbar-default navbar-fixed-top">-->
+<!--<div class="navbar-inner">-->
+<!--<div class="container">-->
+<!--<div class="navbar-header">-->
+<!--<a class="navbar-brand visible-xs" href="#!/">-->
+<!--home-->
+<!--</a>-->
+<!--<a class="navbar-brand visible-xs" href="#!/login">-->
+<!--Login-->
+<!--</a>-->
+<!---->
+<!--Profile-->
+<!--</a>-->
+<!--<a class="navbar-brand visible-xs" href="#!/mail">-->
+<!--Mail-->
+<!--</a>-->
+<!--</div>-->
+<!--</div>-->
+<!--</div>-->
+<!--</header>-->
