--- a/app/app/less/app.less
+++ b/app/app/less/app.less
@@ -9,7 +9,17 @@
 
 // z-index
 @z-float-btn: 100;
+@z-header: 100;
+
+//sizes
+@header-height: 55px;
 
 @import "tools.less";
 @import "login.less";
 @import "header.less";
+@import "profile.less";
+
+
+#uiview {
+  height: 100%;
+}
