--- a/app/app/modules/core/views/header.html
+++ b/app/app/modules/core/views/header.html
@@ -1,17 +1,18 @@
-<div class="row header">
-    <div class="col-xs-6 logo"></div>
-    <!-- =================== Navigation bar =================== -->
-    <div class="col-xs-2 nav-btn">
-        <a class="visible-xs" href="#!/queue">A</a>
-    </div>
-    <div class="col-xs-2 nav-btn">
-        <a class="visible-xs" href="#!/queue/list">L</a>
-    </div>
-    <div class="col-xs-2 nav-btn">
-        <a class="visible-xs" href="#!/profile">S</a>
+<div class="container header">
+    <div class="row">
+        <div class="col-xs-6 logo"></div>
+        <!-- =================== Navigation bar =================== -->
+        <div class="col-xs-2 nav-btn">
+            <a class="visible-xs" href="#!/queue">A</a>
+        </div>
+        <div class="col-xs-2 nav-btn">
+            <a class="visible-xs" href="#!/queue/list">L</a>
+        </div>
+        <div class="col-xs-2 nav-btn">
+            <a class="visible-xs" href="#!/profile">S</a>
+        </div>
     </div>
 </div>
-
 <!--<header class="navbar navbar-default navbar-fixed-top">-->
 <!--<div class="navbar-inner">-->
 <!--<div class="container">-->
