--- a/app/app/modules/profile/views/profile.html
+++ b/app/app/modules/profile/views/profile.html
@@ -1,4 +1,32 @@
 <ng-include src="'modules/core/views/header.html'"></ng-include> <!--TODO:Directive-->
-<section>
-    This is the Profileview
-</section>
+<div class="profile-page container">
+
+    <div class="row">
+        <div class="col-xs-12 profile-field row">
+            <div class="col-xs-6">{{L('profile.lang')}}</div>
+            <div class="col-xs-6 text-right">
+                <select name="user-lang" id="user-lang">
+                    <option value="1">1</option>
+                    <option value="2">2</option>
+                    <option value="3">3</option>
+                </select>
+            </div>
+        </div>
+
+        <div class="col-xs-12 profile-field row">
+            <div class="col-xs-6">{{L('profile.city')}}</div>
+            <div class="col-xs-6 text-right">
+                <select name="user-city" id="user-city">
+                    <option value="1">1</option>
+                    <option value="2">2</option>
+                    <option value="3">3</option>
+                </select>
+            </div>
+        </div>
+
+        <div class="col-xs-12 profile-field">{{L('profile.userData')}}</div>
+        <div class="col-xs-12 profile-field">{{L('profile.letterToDev')}}</div>
+        <div class="col-xs-12 profile-field">{{L('profile.licenseAgreement')}}</div>
+        <div class="col-xs-12 profile-field">{{L('profile.about')}}</div>
+    </div>
+</div>
