--- a/app/app/less/header.less
+++ b/app/app/less/header.less
@@ -1,5 +1,20 @@
 .header {
   border-bottom: 1px solid @brand-gray-4;
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: @z-header;
+  width: 100%;
+
+  // fix bootstrap defaults
+  &.container {
+    margin: 0;
+    padding: 0;
+    >.row {
+      padding: 0;
+      margin: 0 0 0 -15px;
+    }
+  }
   .logo {
     height: 50px;
     background-image: url("../img/ui/ui.png");
