--- a/app/app/modules/queue/views/queue.html
+++ b/app/app/modules/queue/views/queue.html
@@ -1,4 +1,4 @@
 <ng-include src="'modules/core/views/header.html'"></ng-include> <!--TODO:Directive-->
-<section>
-    This is the Queueview
-</section>
+<div class="queue-page">
+
+</div>
